--- a/4 JavaScript/KW56JS/第十三章DOM模型/01如何获取dom元素.html
+++ b/4 JavaScript/KW56JS/第十三章DOM模型/01如何获取dom元素.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <div id="box">
         <h1>标题1</h1>
@@ -16,28 +18,27 @@
         <span>紫色</span>
     </div>
 </body>
-   <script>
-       //通过js获取dom元素
-       //根据id获取元素
+<script>
+    //通过js获取dom元素
+    //根据id获取元素
     //    let boxObj = document.getElementById("box");
-       let boxObj = document.querySelector("#box"); //根据选择器获取第一个元素
-       console.log(boxObj);
+    let boxObj = document.querySelector("#box"); //根据选择器获取第一个元素
+    console.log(boxObj);
 
-       let spanObj = document.querySelector("span");
-       console.log(spanObj.innerHTML);
+    let spanObj = document.querySelector("span");
+    console.log(spanObj.innerHTML);
 
-       //根据标签获取元素
-       let spans = document.getElementsByTagName("span");
-       console.log(spans[1]);
+    //根据标签获取元素
+    let spans = document.getElementsByTagName("span");
+    console.log(spans[1]);
 
-       //获取指定选择器包含的元素对象，返回的是伪数组
-       let spans2 = document.querySelectorAll("#box2 span");
-       console.log(spans2[0]);
+    //获取指定选择器包含的元素对象，返回的是伪数组
+    console.log("+++++++++++++++++++++++");
+    let spans2 = document.querySelectorAll("#box2 span");
+    console.log(spans2[0]);
 
-       console.log(box2);
+    console.log(box);
 
-       
+</script>
 
-
-   </script>
 </html>
